Archive2/7b/1e28c804245e4a/output
main.cpp:3:6: warning: ISO C++ forbids declaration of 'main' with no type [-Wpedantic]
 main()
      ^
main.cpp: In function 'int main()':
main.cpp:7:44: warning: format '%d' expects a matching 'int' argument [-Wformat=]
 printf("%d,count=1;count<100;count=count+1")
                                            ^
main.cpp:8:1: error: expected ';' before 'sum'
 sum=sum+count;
 ^
main.cpp:5:5: warning: unused variable 'count' [-Wunused-variable]
 int count=0;
     ^
main.cpp:6:5: warning: unused variable 'sum' [-Wunused-variable]
 int sum=0;
     ^
